# chip8_emulator

./: CMakeLists.txt  README.md
include/: app.h  chip8.h  debugger.h
src/CHIP8/: chip8_instructions.c  chip8_utils.c
src/Debugger/: debugger.c
src/Emulator/: app.c  main.c
